# auto_nav_team18

./: .gitignore  AGENTS.md  frames_2026-04-20_15.00.11.gv  package.xml  setup.cfg  setup.py
artifacts/logs/: home_pose.yaml
auto_nav/: config_params.py  odom_tf_broadcaster.py  robot_extrinsics.py
auto_nav/mission/: mission_controller.py  mission_events.py
auto_nav/navigation/: gap_planner.py  obstacle_guard.py  outdoor_pose_fuser.py  path_follower.py  weave_planner.py
auto_nav/perception/: cone_detector.py  oakd_camera.py
auto_nav/teleop/: cmd_gate_node.py  gamepad_watchdog_node.py  joy_mapper_node.py  mode_manager_node.py  oakd_camera.py
config/: camera.yaml  gps.yaml  imu.yaml  lidar.yaml  mission.yaml  real.yaml  robot.yaml  waypoints.yaml  waypoints_bench_4.yaml  waypoints_real_gps.yaml
config/gamepad/: ps4.yaml  switch_pro.yaml
docs/: architecture.md  environment.md  goal.md  gps_nav_test_plan.md  qa.md  requirement.md  step_0.md
docs/steps/: gps_function.md  step_1.md  step_2.md  step_3.md  step_4.md  step_5.md  (+2 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: bringup.launch.py  mission.launch.py  navigation.launch.py  navigation_bench.launch.py  perception.launch.py  teleop.launch.py
log/: latest_build
scripts/: record_gps_debug.sh  start_all_services.sh
tests/: test_config_params.py  test_gps_launch.py  test_home_pose_recorder.py  test_journey_summary.py  test_lidar_config.py  test_mission_fsm.py  test_navigation_step3.py  test_odom_tf_broadcaster.py  test_outdoor_pose_fuser.py  test_perception.py  test_record_gps_debug_script.py  test_robot_extrinsics.py  test_sim_bringup_launch.py  test_start_all_services_script.py  test_teleop.py  test_teleop_launch.py  test_tf_tree.py  test_watchdog.py  test_waypoints.py
(+45 files in other folders)
